# datamodel

./: .gitignore  README.md  requirements.txt  setup.cfg  test-requirements.txt
.github/workflows/: test.yml
doc/: SDX2.0 Data Model.docx
models/: __init__.py  connection.py  link.py  location.py  node.py  port.py  service.py  topology.py
parsing/: __init__.py  connectionhandler.py  exceptions.py  linkhandler.py  locationhandler.py  nodehandler.py  porthandler.py  servicehandler.py  topologyhandler.py
schemas/: Connection.json  Link.json  Location.json  Node.json  Path.json  Port.json  Service.json  Topology.json
sdxdatamodel/models/: __init__.py  connection.py  link.py  link_measurement_period.py  node.py  port.py  service.py  topology.py
sdxdatamodel/parsing/: __init__.py  connectionhandler.py  exceptions.py  linkhandler.py  locationhandler.py  nodehandler.py  (+3 more)
test/: amlight.json  p2p.json  test_connection_handler.py  test_connection_validator.py  test_link_handler.py  test_location_handler.py  test_node_handler.py  test_port_handler.py  test_service_handler.py  test_topology_graph.py  test_topology_grenmlconverter.py  test_topology_handler.py  test_topology_manager.py  test_topology_validator.py
tests/: test_connection_handler.py  test_connection_validator.py  test_link_handler.py  test_location_handler.py  test_node_handler.py  test_port_handler.py  test_service_handler.py  test_te_manager.py  test_topology_graph.py  test_topology_grenmlconverter.py  test_topology_handler.py  test_topology_manager.py  test_topology_validator.py
topologymanager/: grenmlconverter.py  manager.py
validation/: connectionvalidator.py  topologyvalidator.py  validator.py
(+27 files in other folders)
