[metadata]
name = sdxdatamodel
version = 0.0.1
author = Y. Xin
author_email = yxin@renci.org
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/atlanticwave-sdx/datamodel
project_urls =
    Bug Tracker = https://github.com/atlanticwave-sdx/datamodel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = sdxdatamodel
packages = find:
install_requires =
	python-dateutil~=2.8
python_requires = >=3.6

[options.packages.find]
exclude =
	docs
	test*
where = sdxdatamodel
